# fastapi

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
api/v1/models/: user.py
api/v1/routes/: __init__.py  user.py
api/v1/service/: user.py
core/: alembic.ini  database.py  utils.py
core/entity/: __init__.py  category.py  product.py  user.py
core/migrations/: env.py
core/repository/: user.py
migrations/: env.py
